--- a/about/index.html
+++ b/about/index.html
@@ -404,11 +404,11 @@ I am interested in programming, reading, and innovation.</p>
                 <p class="copyright text-muted">
                     Copyright &copy; Chang's Blog 2020
                     <br>
-                    Powered by <a href="http://huangxuan.me">Hux Blog</a> |
-                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
+                    Powered by <a href="https://github.com/Huxpro/huxpro.github.io">Hux Blog</a> |
+                    <!-- <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
-                    </iframe>
+                    </iframe> -->
                 </p>
             </div>
         </div>
