--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ Where YEAR is a four-digit numbe...
                 <p class="copyright text-muted">
                     Copyright &copy; Chang's Blog 2020
                     <br>
-                    Powered by <a href="https://github.com/Huxpro/huxpro.github.io">Hux Blog</a> |
+                    Powered by <a href="https://github.com/Huxpro/huxpro.github.io">Hux</a> |
                     <!-- <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
